--- a/ansible/roles/base/tasks/timesync.yml
+++ b/ansible/roles/base/tasks/timesync.yml
@@ -1,7 +1,7 @@
 ---
 - name: Init /etc/systemd/timesyncd.conf
   become: yes
-  copy:
+  ansible.builtin.copy:
     dest: /etc/systemd/timesyncd.conf
     src: timesyncd.conf
 
