--- a/ansible/roles/fonts/tasks/main.yml
+++ b/ansible/roles/fonts/tasks/main.yml
@@ -19,6 +19,6 @@
   become_user: aur_builder
 
 - name: Copy fontconfig configuration
-  copy:
+  ansible.builtin.copy:
     dest: ~/.config/fontconfig/fonts.conf
     src: local.conf
