--- a/ansible/roles/sway/tasks/kanshi.yml
+++ b/ansible/roles/sway/tasks/kanshi.yml
@@ -14,6 +14,6 @@
     mode: 0750
 
 - name: Copy kanshi configuration
-  copy:
+  ansible.builtin.copy:
     dest: "/home/{{ user.name }}/.config/kanshi/config"
     src: kanshi/config
