Add more packages

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -51,3 +51,8 @@ packages:
     - keepassxc
     - nnn
     - python-pip
+    - vlc
+    - firefox
+    - chromium
+    - pipewire
+    - pipewire-pulse
