Add xdg-user-dirs role

--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -7,6 +7,7 @@
     - { role: fonts, tags: "fonts" }
     - { role: shell, tags: "shell" }
     - { role: dotfiles, tags: "dotfiles" }
+    - { role: xdg-user-dirs, tags: "xdg-user-dirs" }
     - { role: dev-tools, tags: "dev-tools" }
     - { role: firewall, tags: "firewall" }
     - { role: ssd, tags: "ssd" }
