Start udiskie, kanshi and gammastep as systemd services

--- a/ansible/roles/sway/tasks/main.yml
+++ b/ansible/roles/sway/tasks/main.yml
@@ -29,3 +29,24 @@
   become_user: aur_builder
 
 - import_tasks: nwg-launchers.yml
+
+- name: Enable and start kanshi systemd user service
+  ansible.builtin.systemd:
+    name: kanshi.service
+    scope: user
+    state: started
+    enabled: yes
+
+- name: Enable and start udiskie systemd user service
+  ansible.builtin.systemd:
+    name: udiskie.service
+    scope: user
+    state: started
+    enabled: yes
+
+- name: Enable and start gammastep systemd user service
+  ansible.builtin.systemd:
+    name: gammastep-indicator.service
+    scope: user
+    state: started
+    enabled: yes
