--- a/ansible/roles/sway/tasks/main.yml
+++ b/ansible/roles/sway/tasks/main.yml
@@ -30,23 +30,15 @@
 
 - import_tasks: nwg-launchers.yml
 
-- name: Enable and start kanshi systemd user service
+- name: Enable and start systemd user services
   ansible.builtin.systemd:
-    name: kanshi.service
+    name: "{{ item }}"
     scope: user
     state: started
     enabled: yes
-
-- name: Enable and start udiskie systemd user service
-  ansible.builtin.systemd:
-    name: udiskie.service
-    scope: user
-    state: started
-    enabled: yes
-
-- name: Enable and start gammastep systemd user service
-  ansible.builtin.systemd:
-    name: gammastep-indicator.service
-    scope: user
-    state: started
-    enabled: yes
+  loop:
+    - kanshi.service
+    - udiskie.service
+    - nextcloud.service
+    - gammastep-indicator.service
+    - autotiling.service
