--- a/ansible/roles/base/tasks/timesync.yml
+++ b/ansible/roles/base/tasks/timesync.yml
@@ -7,7 +7,7 @@
 
 - name: Enable systemd-timesyncd
   become: yes
-  systemd:
+  ansible.builtin.systemd:
     name: systemd-timesyncd.service
     state: started
     enabled: yes
