Replace pacman with community.general.pacman

--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -23,7 +23,7 @@
   tasks:
     - name: Install more packages
       become: true
-      pacman:
+      community.general.pacman:
         name: "{{ packages.more }}"
         state: present
       tags: "install-packages"
