--- a/ansible/roles/bluetooth/tasks/main.yml
+++ b/ansible/roles/bluetooth/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install bluetooth protocol stack
   become: yes
-  pacman:
+  community.general.pacman:
     name:
       - bluez
       - bluez-utils
