--- a/ansible/roles/microcode/tasks/main.yml
+++ b/ansible/roles/microcode/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install intel microcode
   become: yes
-  pacman:
+  community.general.pacman:
     name: intel-ucode
     state: present
   when: "'GenuineIntel' in ansible_processor"
