--- a/ansible/roles/office/tasks/nextcloud.yml
+++ b/ansible/roles/office/tasks/nextcloud.yml
@@ -1,5 +1,5 @@
 ---
 - name: Install nextcloud desktop sync client
   become: yes
-  pacman:
+  community.general.pacman:
     name: nextcloud-client
