--- a/ansible/roles/themes/tasks/main.yml
+++ b/ansible/roles/themes/tasks/main.yml
@@ -14,7 +14,7 @@
     state: present
 
 - name: Create gtk3 settings directory
-  file:
+  ansible.builtin.file:
     path: "~/.config/gtk-3.0"
     state: directory
 
