--- a/ansible/roles/os-install/tasks/010_erase_install_disk.yml
+++ b/ansible/roles/os-install/tasks/010_erase_install_disk.yml
@@ -1,12 +1,12 @@
 ---
 - name: "Read device information"
-  parted:
+  community.general.parted:
     device: "{{ install_disk }}"
     unit: MiB
   register: install_disk_info
 
 - name: "Remove all partitions from {{ install_disk }}"
-  parted:
+  community.general.parted:
     device: "{{ install_disk }}"
     number: "{{ item.num }}"
     state: absent
