--- a/ansible/roles/network/tasks/hostsfile.yml
+++ b/ansible/roles/network/tasks/hostsfile.yml
@@ -1,7 +1,7 @@
 ---
 - name: Init /etc/hosts
   become: yes
-  template:
+  ansible.builtin.template:
     src: hosts.j2
     dest: /etc/hosts
     mode: 0644
