--- a/ansible/roles/os-install/tasks/070_mirrorlist.yml
+++ b/ansible/roles/os-install/tasks/070_mirrorlist.yml
@@ -1,3 +1,3 @@
 ---
 - name: Generate pacman mirrorlist
-  command: reflector --country Sweden --country Norway --country Danmark --country Germany --country Finland --age 12 --protocol https --sort rate -n 5 --save /etc/pacman.d/mirrorlist
+  ansible.builtin.command: reflector --country Sweden --country Norway --country Danmark --country Germany --country Finland --age 12 --protocol https --sort rate -n 5 --save /etc/pacman.d/mirrorlist
