--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -1,26 +1,10 @@
 ---
-- name: "Ensure ~/.asdf does not exist"
-  ansible.builtin.file:
-    path: "~/.asdf"
-    state: absent
-
-- name: Clone asdf repository
+- name: Clone asdf repository to {{ asdf.install_dir }}
   git:
     repo: https://github.com/asdf-vm/asdf.git
-    dest: "~/.asdf"
-    version: v0.8.0
+    dest: "{{ asdf.install_dir }}"
+    version: "{{ asdf.version }}"
 
-- name: Add java plugin to asdf
-  ansible.builtin.command: "~/.asdf/bin/asdf plugin add java"
-
-- name: Install openjdk
-  ansible.builtin.command: "~/.asdf/bin/asdf install java latest:openjdk"
-
-- name: Add maven plugin to asdf
-  ansible.builtin.command: "~/.asdf/bin/asdf plugin add maven"
-
-- name: Install latest maven
-  ansible.builtin.command: "~/.asdf/bin/asdf install maven latest"
-
-- name: Add nodejs plugin to asdf
-  ansible.builtin.command: "~/.asdf/bin/asdf plugin add nodejs"
+- include_tasks: java.yml
+- include_tasks: maven.yml
+- include_tasks: node.yml
