--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -5,6 +5,12 @@
     dest: "{{ asdf.install_dir }}"
     version: "{{ asdf.version }}"
 
+- name: List installed asdf plugins
+  command: "{{ asdf.bin }} plugin list"
+  register: installed_asdf_plugins
+  failed_when: false
+  changed_when: false
+
 - include_tasks: java.yml
 - include_tasks: maven.yml
 - include_tasks: node.yml
