Use FQDN for community.general.pacman

--- a/ansible/roles/power_management/tasks/main.yml
+++ b/ansible/roles/power_management/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Install power management tools
   become: yes
-  ansible.builtin.pacman:
+  community.general.pacman:
     name: tlp
 
 - name: Init /etc/tlp.conf
