--- a/ansible/roles/bluetooth/tasks/main.yml
+++ b/ansible/roles/bluetooth/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Install bluetooth protocol stack
   become: yes
   community.general.pacman:
-    name:
+    pkg:
       - bluez
       - bluez-utils
 
