--- a/ansible/roles/office/tasks/nextcloud.yml
+++ b/ansible/roles/office/tasks/nextcloud.yml
@@ -2,4 +2,4 @@
 - name: Install nextcloud desktop sync client
   become: yes
   community.general.pacman:
-    name: nextcloud-client
+    pkg: nextcloud-client
