--- a/ansible/roles/sway/tasks/main.yml
+++ b/ansible/roles/sway/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Install sway
   become: yes
   community.general.pacman:
-    name:
+    pkg:
       - brightnessctl
       - sway
       - gammastep # auto-colour temperature adjustment tool
