--- a/ansible/roles/microcode/tasks/main.yml
+++ b/ansible/roles/microcode/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Install intel microcode
   become: yes
   community.general.pacman:
-    name: intel-ucode
+    pkg: intel-ucode
     state: present
   when: "'GenuineIntel' in ansible_processor"
   notify:
