--- a/ansible/roles/ssd/tasks/main.yml
+++ b/ansible/roles/ssd/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Install util-linux package
   become: yes
   community.general.pacman:
-    name: util-linux
+    pkg: util-linux
     state: present
 
 - name: Schedule weekly SSD TRIM
