Install unzip as aws-cli dependency

--- a/ansible/roles/dev-tools/tasks/aws-cli.yml
+++ b/ansible/roles/dev-tools/tasks/aws-cli.yml
@@ -1,4 +1,8 @@
---- 
+---
+- name: Install dependencies
+  ansible.general.pacman:
+    pkg: unzip
+
 - name: Add aws-cli plugin to asdf
   ansible.builtin.command: "{{ asdf.bin }} plugin add awscli"
   register: asdf_awscli_plugin_installed
@@ -14,7 +18,7 @@
   ansible.builtin.command: "{{ asdf.bin }} global awscli latest"
 
 - name: "Symlink ~/.asdf/shims/aws_completer to ~/.local/bin"
-  # Reason: .zshrc relies upon ~/local/bin/aws_completer to exist for 
+  # Reason: .zshrc relies upon ~/local/bin/aws_completer to exist for
   # aws-cli auto-completion
   ansible.builtin.file:
     src: "~/.asdf/shims/aws_completer"
