--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -5,6 +5,11 @@
     - name: luks_password
       prompt: "luks password"
       private: yes
+    - name: user_password
+      prompt: "user password"
+      private: yes
+      encrypt: "sha512_crypt"
+      confirm: yes
   roles:
     - kewlfft.aur # Necessary for installing packages from AUR
     - { role: network, tags: "network" }
@@ -24,7 +29,7 @@
     - { role: yubikey, tags: "yubikey" }
     - { role: office, tags: "office" }
     - { role: digikam, tags: "digikam" }
-    - { role: power_management, tags: "power_mgmt"}
+    - { role: power_management, tags: "power_mgmt" }
   tasks:
     - name: Install more packages
       become: true
@@ -32,7 +37,7 @@
         pkg: "{{ packages.more }}"
         state: present
       tags: "install-packages"
-  handlers: 
+  handlers:
     - name: "regenerate initramfs"
       become: yes
       ansible.builtin.command: mkinitcpio -P
