--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -11,25 +11,25 @@
       encrypt: "sha512_crypt"
       confirm: yes
   roles:
-    - kewlfft.aur # Necessary for installing packages from AUR
-    - { role: network, tags: "network" }
+    #    - { role: network, tags: "network" }
     - base
-    - { role: fonts, tags: "fonts" }
+    - users
+    #    - { role: fonts, tags: "fonts" }
     - { role: shell, tags: "shell" }
-    - { role: xdg-user-dirs, tags: "xdg-user-dirs" }
-    - { role: flatpak, tags: "flatpak" }
-    - { role: dev-tools, tags: "dev-tools" }
-    - { role: firewall, tags: "firewall" }
-    - { role: ssd, tags: "ssd" }
-    - { role: alacritty, tags: "alacritty" }
     - { role: sway, tags: "sway" }
-    - { role: bluetooth, tags: "bluetooth" }
-    - { role: themes, tags: "themes" }
-    - { role: yubikey, tags: "yubikey" }
-    - { role: office, tags: "office" }
-    - { role: digikam, tags: "digikam" }
-    - { role: power_management, tags: "power_mgmt" }
     - { role: dotfiles, tags: "dotfiles" }
+  #    - { role: xdg-user-dirs, tags: "xdg-user-dirs" }
+  #    - { role: flatpak, tags: "flatpak" }
+  ##    - { role: dev-tools, tags: "dev-tools" }
+  #    - { role: firewall, tags: "firewall" }
+  #    - { role: ssd, tags: "ssd" }
+  #    - { role: alacritty, tags: "alacritty" }
+  #    - { role: bluetooth, tags: "bluetooth" }
+  #    - { role: themes, tags: "themes" }
+  #    - { role: yubikey, tags: "yubikey" }
+  ##    - { role: office, tags: "office" }
+  ##    - { role: digikam, tags: "digikam" }
+  #    - { role: power_management, tags: "power_mgmt" }
   tasks:
     - name: Install more packages
       become: true
