--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -1,29 +1,5 @@
-hostname: "ThinkR"
-
-system:
-  processor: intel
-
+---
 timezone: Europe/Stockholm
-
-partitions:
-  boot:
-    label: "BOOT"
-    dev: "/dev/disk/by-partlabel/BOOT"
-  luks:
-    label: "LUKS"
-    dev: "/dev/disk/by-partlabel/LUKS"
-    mapper_name: "cryptlvm"
-
-lvm:
-  vg_main: "vg.main"
-  lv_root:
-    name: "root"
-    label: "ROOT"
-    dev: "/dev/vg.main/root"
-  lv_swap:
-    name: "swap"
-    label: "SWAP"
-    dev: "/dev/vg.main/swap"
 
 user:
   name: macgyves
@@ -42,6 +18,7 @@ packages:
     - git
     - zsh
   more:
+    - alacritty
     - curl
     - openssh
     - rsync
