--- a/ansible/roles/dev-tools/tasks/java.yml
+++ b/ansible/roles/dev-tools/tasks/java.yml
@@ -1,11 +1,11 @@
---- 
+---
 - name: Add java plugin to asdf
   ansible.builtin.command: "{{ asdf.bin }} plugin add java"
   register: asdf_java_plugin_installed
   failed_when: asdf_java_plugin_installed.rc > 2
   when: "'java' not in installed_asdf_plugins.stdout_lines"
 
-- name: Install JDKS
+- name: Install JDKs
   ansible.builtin.command: "{{ asdf.bin }} install java {{ item }}"
   loop: "{{ jdk.versions }}"
   register: jdk_install_result
