--- a/ansible/roles/fonts/tasks/main.yml
+++ b/ansible/roles/fonts/tasks/main.yml
@@ -11,13 +11,13 @@
       - inter-font
       - noto-fonts-emoji
 
-- name: Install fonts from AUR
-  kewlfft.aur.aur:
-    name: nerd-fonts-fira-code
-    use: makepkg
-    state: present
-  become: yes
-  become_user: aur_builder
+#- name: Install fonts from AUR
+#  kewlfft.aur.aur:
+#    name: nerd-fonts-fira-code
+#    use: makepkg
+#    state: present
+#  become: yes
+#  become_user: aur_builder
 
 - name: Ensure ~/.config/fontconfig directory exists
   ansible.builtin.file:
