--- a/ansible/roles/users/tasks/main.yml
+++ b/ansible/roles/users/tasks/main.yml
@@ -30,16 +30,5 @@
     src: sudoers
     mode: 0440
 
-- name: Ensure directory /etc/systemd/system/getty@tty1.service.d exists
-  become: yes
-  ansible.builtin.file:
-    path: /etc/systemd/system/getty@tty1.service.d
-    state: directory
-
-- name: Create drop-in-snippet for getty@tty1.service
-  become: yes
-  ansible.builtin.template:
-    dest: /etc/systemd/system/getty@tty1.service.d/override.conf
-    src: getty@tty1.service.override.conf.j2
-
+- import_tasks: auto_login_user.yml
 - import_tasks: create_aur_builder_user.yml
